<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:orientation="vertical">

    <com.route4me.trucksurvey.view.ParameterItemView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:label="@string/lbl"
        app:title="@string/truckWeight" />

    <com.route4me.trucksurvey.view.ParameterItemView
        android:id="@+id/weightPerAxle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:label="@string/lbl"
        app:title="@string/weightPerAxle" />

    <com.route4me.trucksurvey.view.BaseTextView
        android:id="@+id/saveWeightBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_border"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>