<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/labelsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/dividerView"
        android:orientation="vertical">

        <com.route4me.trucksurvey.view.BaseTextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/trailersCount"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <com.route4me.trucksurvey.view.BaseTextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/height"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <com.route4me.trucksurvey.view.BaseTextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/width"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <com.route4me.trucksurvey.view.BaseTextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/weight"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <com.route4me.trucksurvey.view.BaseTextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/weightPerAxle"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <com.route4me.trucksurvey.view.BaseTextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/maxAllowedWeight"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <com.route4me.trucksurvey.view.BaseTextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/isTunnelsAllowed"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <com.route4me.trucksurvey.view.BaseTextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/isDifficultTurnsAllowed"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <com.route4me.trucksurvey.view.BaseTextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/hazardousGood"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:id="@+id/dividerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/inputsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/dividerView"
        android:orientation="vertical">

        <com.route4me.trucksurvey.view.BaseEditTextView
            android:id="@+id/trailersCount"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/color_input_bg"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark" />

        <com.route4me.trucksurvey.view.BaseEditTextView
            android:id="@+id/height"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/color_input_bg"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal|numberSigned"
            android:textColor="@color/colorPrimaryDark" />

        <com.route4me.trucksurvey.view.BaseEditTextView
            android:id="@+id/width"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/color_input_bg"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal|numberSigned"
            android:textColor="@color/colorPrimaryDark" />

        <com.route4me.trucksurvey.view.BaseEditTextView
            android:id="@+id/weight"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/color_input_bg"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal|numberSigned"
            android:textColor="@color/colorPrimaryDark" />

        <com.route4me.trucksurvey.view.BaseEditTextView
            android:id="@+id/weightPerAxle"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/color_input_bg"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal|numberSigned"
            android:textColor="@color/colorPrimaryDark" />

        <com.route4me.trucksurvey.view.BaseEditTextView
            android:id="@+id/maxAllowedWeight"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/color_input_bg"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal|numberSigned"
            android:textColor="@color/colorPrimaryDark" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/isTunnelsAllowed"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/isDifTurnsAllowed"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp" />

        <com.route4me.trucksurvey.view.MultiSpinner
            android:id="@+id/hazardousGoodsSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:drawable/btn_dropdown"
            android:gravity="center"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <com.route4me.trucksurvey.view.BaseTextView
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_border"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</RelativeLayout>
